<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_query_hint">Enter search query</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_display_full_image">DisplayFullImage</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Image Search</string>
    <string name="settings_screen_description">Advanced Search Options</string>
    <string name="image_size_label">Image Size</string>
    <string name="color_settings_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_filter_label">Site filter</string>
    <string name="save_button_text">Save</string>
    <string name="site_filter_hint">ex: espn.com</string>
    <string name="see_more_button_text">See more</string>

</resources>
