<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageSearchActivity" >

    <EditText
        android:id="@+id/etSearchQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="9"
        android:hint="@string/search_query_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/etSearchQuery"
        android:layout_alignBottom="@+id/etSearchQuery"
        android:text="@string/search_button_text" />

    <GridView
        android:id="@+id/gvImageGrid"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/etSearchQuery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:numColumns="3" >
    </GridView>

    <Button
        android:id="@+id/btSeeMore"
        android:onClick="refreshGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gvImageGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/see_more_button_text" />
    
</RelativeLayout>
